kubernetes/neo/apps/observability/goldpinger/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldpinger-app
  #annotations:
  #  hajimari.io/icon: "table-tennis"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: private-gateway
    namespace: istio-gateways
  hostnames:
  - "goldpinger.${CLUSTER_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ''
      kind: Service
      name: goldpinger
      port: 80
      weight: 100
